[project]
name = "llmattacks"
version = "0.1.0"
description = "LLM Attacks Catalog"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "markdownify",
    "pdfminer.six",
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-coverage-comment",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
