[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmattacks"
version = "0.1.0"
description = "LLM Attacks Catalog"
authors = [ {name="LLM Attacks Team"} ]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "requests",
    "markdownify",
    "pdfminer.six",
    "PyYAML",
    "pydantic>=2.0",
]

[tool.black]
line-length = 88
extend-exclude = 'scripts/.*\.py'

